<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/victim_section">
        <menu>
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/good_citizen_response"
                android:checkable="true"/>/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_whatshot_black_24dp"
                android:title="@string/crime_heat_map"
                android:checkable="true"/>/>
            <item
                android:id="@+id/nav_helpline"
                android:icon="@drawable/ic_map_black_24dp"
                android:title="@string/emergency_helpline"
                android:checkable="true"/>/>
        </menu>
    </item>

    <item android:title="@string/my_account">
        <menu>

            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_add_alert_black_24dp"
                android:title="@string/my_emergency_complaints"
                android:checkable="true"/>

            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/my_close_people"
                android:checkable="true"/>

        </menu>
    </item>

    <item android:title="@string/my_profile">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/edit_my_profile"
                android:checkable="true"/>

        </menu>
    </item>

</menu>
