<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="52dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            tools:context=".MapsActivity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/victimView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/black_border"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/proImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="1sp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/VName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="left"
            android:padding="3dp"
            android:text="@string/name"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/VPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:drawableRight="@drawable/ic_call_black_24dp_new"
            android:gravity="left"
            android:padding="3dp"
            android:text="@string/phone"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/VLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:padding="3dp"
            android:text="@string/location"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/VGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="3dp"
            android:gravity="left"
            android:padding="3dp"
            android:text="@string/gender"
            android:textColor="#ffffff"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/caseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/black_border"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cases"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="345dp"
        android:background="@drawable/black_border"
        android:text="@string/hide"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/black_border"
        android:text="@string/show"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/notifyCloseOnes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/black_border"
        android:text="@string/notify_close_people"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/findPoliceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/black_border"
        android:text="@string/find_police"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</FrameLayout>

