<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    android:transitionName="nextButtonL"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:transitionName="continueButtonL">

        <ImageView
            android:id="@+id/back_buttonReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:transitionName="backbuttonReg" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/nova_square"
            android:paddingHorizontal="10dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:transitionName="RegisterName" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/full_name"
            android:paddingHorizontal="10dp"
            android:textColorHint="#000000"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_person_black_24dp"
            app:startIconTint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/adhar_card_number"
            android:paddingHorizontal="10dp"
            android:textColorHint="#000000"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_person_pin_black_24dp"
            app:startIconTint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adharcardNo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/address"
            android:paddingHorizontal="10dp"
            android:textColorHint="#000000"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_home_black_24dp"
            app:startIconTint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textPostalAddress"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/gender"
            android:textColor="#000000"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:outlineSpotShadowColor="#000000">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:paddingEnd="10dp"
                android:text="@string/male"
                android:textColor="#000000" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/female"
                android:textColor="#000000" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:paddingRight="10dp"
                android:text="@string/other"
                android:textColor="#000000" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000000"
            android:paddingHorizontal="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/age"
            android:textColor="#000000"
            android:textSize="20dp" />

        <DatePicker
            android:id="@+id/datep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarTextColor="#000000"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:spinnersShown="true"
            android:yearListSelectorColor="#000000" />


        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/black_border"
            android:onClick="CallHomeScreen"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:transitionName="continueButtonL" />

    </LinearLayout>

</ScrollView>