<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#284B73"
        android:orientation="vertical"
        android:transitionName="nextButtonL">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="277dp"
            android:padding="40dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:fontFamily="sans-serif-medium"
                android:text="Janrakshak App"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nova_square"
                android:text="@string/victim_login"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/otpsent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/sent_otp"
                android:drawableRight="@drawable/ic_mode_edit_black_24dp"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.chaos.view.PinView
                android:id="@+id/pinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="65dp"
                android:cursorVisible="true"
                android:inputType="number"
                android:itemBackground="#ffffff"
                android:textColor="#000000"
                app:cursorColor="#000000"
                app:itemCount="6"
                app:itemHeight="50dp"
                app:itemWidth="50dp" />

            <Button
                android:id="@+id/verifyOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/black_border"
                android:onClick="callNewScreenAfterOTP"
                android:text="@string/verify_code"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:transitionName="continueButtonL" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>